# realtime_leaderboard

./: .gitignore  Dockerfile  README.md  app.py  cleanup.sh  client.html  config.py  const.py  docker-compose.yml  dynamodb_operations.py  pyproject.toml  redis_operations.py  scoring.py  validation.py
src/: app.py  config.py  const.py  dynamodb_operations.py  kafka_operations.py  redis_operations.py  scoring.py
tests/: test_app.py
