[tool.poetry]
name = "flink-with-python"
version = "0.1.0"
description = ""
authors = ["Sunny <itworkjp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
grpcio-tools = "^1.59.3"
grpcio = "^1.59.3"
loguru = "^0.7.2"
black = "^23.11.0"
asyncio = "^3.4.3"
kafka-python = "^2.0.2"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
flask-cors = "^3.0.10"
redis = "^5.0.1"
boto3 = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
